# serde-python-typing

./: Cargo.toml  README.md
src/: de.rs  lib.rs  schema.rs  ser.rs  types.rs
