[package]
name = "serde-python-typing"
version = "0.1.0-unreleased"
authors = ["Evalf <info@evalf.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/evalf/serde-python-typing"
keywords = ["serde", "serialization", "python"]
categories = ["encoding"]
description = "Library for (de)serializing Python objects using Serde"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
pyo3 = "0.10.1"
